--- a/css/orlando.css
+++ b/css/orlando.css
@@ -1,6 +1,5 @@
-@font-face{
-	font-family: sans-serif;
-	font-size: 1em;
+*{
+	font-family: 'Open Sans', sans-serif;
 }
 header {
 	width: 100%;
@@ -115,7 +114,6 @@ header #logotipo {
 
 #menu li{
 	display: inline-block;
-	font-family: sans-serif;
 }
 #menu li.search{
 	width: 182px;
@@ -159,7 +157,6 @@ header #logotipo {
 	position: absolute;
 	font-size: 92px;
 	text-shadow: 2px 2px 2px rgba(0,0,0,.45);
-	font-family: sans-serif;
 	margin-left: 30px;
 }
 #banner h1 small{
@@ -176,7 +173,6 @@ header #logotipo {
 }
 #news h2{
 	color: #5E2799;
-	font-family: sans-serif;
 	font-size: 48px;
 	text-transform: uppercase;
 	text-align: center;
@@ -194,13 +190,11 @@ header #logotipo {
 #news .thumbnails h3{
 	color: #5E299A;
 	font-size: 18px;
-	font-family: sans-serif;
 	margin-bottom: 0;
 }
 #news .thumbnails time{
 	color: #A7A7A7;
 	font-size: 18px;
-	font-family: sans-serif;
 }
 #estatisticas {
 	background-color: #5E299A;
@@ -211,7 +205,6 @@ header #logotipo {
 #estatisticas p{
 	color: #FDE092;
 	text-transform: uppercase;
-	font-family: sans-serif;
 	font-size: 64px;
 	margin-top: 36px;
 }
@@ -227,7 +220,6 @@ header #logotipo {
 }
 #call-to-action h2{
 	color: #5E2799;
-	font-family: sans-serif;
 	font-size: 48px;
 	margin: 20px auto;
 }
@@ -287,13 +279,11 @@ footer .row-cinza-escuro{
 }
 footer .float-left{
 	color: #666;
-	font-family: sans-serif;
 	font-size: 14px;
 	font-weight: bold;
 }
 footer .text-roxo{
 	color: #623291;
-	font-family: sans-serif;
 	font-size: 14px;
 	font-weight: bold;
 }
@@ -305,7 +295,6 @@ footer .col-popular-post,footer .col-links,footer .col-get-in-touch{
 }
 
 footer .row-cols h4{
-	font-family: sans-serif;
 	font-size: 16px;
 	font-weight: #fff;
 	padding-bottom: 17px;
@@ -314,12 +303,10 @@ footer .row-cols h4{
 }
 footer .row-cols h5{
 	color: #666;
-	font-family: sans-serif;
 	font-size: 14px;
 }
 footer .row-cols time{
 	color: #FDE092;
-	font-family: sans-serif;
 	font-size: 14px;
 }
 footer .row-cols ul{
@@ -328,7 +315,6 @@ footer .row-cols ul{
 footer .col-links a {
 	color: #fff;
 	font-size: 14px;
-	font-family: sans-serif;
 }
 footer .col-links .fa{
 	margin: 0 6px;
@@ -337,7 +323,6 @@ footer .col-links .fa{
 footer .col-get-in-touch address{
 	color: #666;
 	font-size: 14px;
-	font-family: sans-serif;
 }
 footer .col-get-in-touch i{
 	color: #9B9B9B;	
